<resources>
    <string name="app_name">AppMinhaIdeia</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Milk Shake</string>
    <string name="nav_header_subtitle">Caririaçu</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Sair</string>

    <string name="modelo_fragment">Cliente VIP DEMO</string>

    <string name="listar_clientes">Listar Clientes</string>


    <!-- Opções do Menu Lateral Drawer -->
    <string name="fragmento_preto">Fragmento Preto</string>
    <string name="titulo_preto">Preto</string>
    <string name="fragmento_vermelho">Fragmento Vermelho</string>
    <string name="titulo_vermelho">Vermelho</string>
    <string name="fragmento_azul">Fragmento Azul</string>
    <string name="fragmento_cliente">Add Cliente</string>
    <string name="titulo_azul">Azul</string>

    <!-- Opções do Menu Principal -->
    <string name="meu_perfil">Meu Perfil</string>

    <!-- text do formulario cliente -->
    <string name="titulo">Adcionar Clientes</string>
    <string name="nome">Nome Completo</string>
    <string name="email">E-mail</string>
    <string name="cpf">CPF</string>
    <string name="idade">Data de Nascimento</string>
    <string name="telefone">Telefone</string>
    <string name="sexo">Sexo</string>
    <string name="cep">CEP</string>
    <string name="bairro">Bairro</string>
    <string name="logradouro">Logradouro</string>
    <string name="cidade">Cidade</string>
    <string name="estado">Estado</string>
    <string name="cancelar">Cancelar</string>
    <string name="salvar">Salvar</string>
    <string name="termo_de_uso">Termos de Uso</string>

    <string name="novo_cliente">Adicionar Novo Cliente</string>
    <string name="pesquisar">Pesquisar</string>
    <string name="lista_de_clientes">Lista de Clientes</string>
    <string name="nome_do_cliente">ID, Nome do Cliente</string>
    <string name="fragmento_listar_clientes">Listar os Clientes</string>
</resources>

