<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.ModeloClienteFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <TextView
        android:id="@+id/txtTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="27sp"
        android:layout_marginTop="25dp"
        android:layout_gravity="center"
        android:hint="@string/TelaCliente"
        android:textStyle="bold"
        android:textColor="@color/black"
        />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/txtEditNome"
            style="@style/editForm"
            android:hint="@string/nome"
            android:textColor="@color/black"
            />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/txtEditEmail"
            style="@style/editForm"
            android:hint="@string/email"
            android:textColor="@color/black"
            />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/txttEdiCpf"
            style="@style/editForm"
            android:hint="@string/cpf"
            android:textColor="@color/black"
            />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/txtEditIdade"
            style="@style/editForm"
            android:hint="@string/idade"
            android:textColor="@color/black"
            />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/txtEditTelefone"
            style="@style/editForm"
            android:hint="@string/telefone"
            android:textColor="@color/black"
            />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/txtEditSexo"
            style="@style/editForm"
            android:hint="@string/sexo"
            android:textColor="@color/black"
            />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/txtEditCep"
            style="@style/editForm"
            android:hint="@string/cep"
            android:textColor="@color/black"
            />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/txtEditBairro"
            style="@style/editForm"
            android:hint="@string/bairro"
            android:textColor="@color/black"
            />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/txtEditLogradouro"
            style="@style/editForm"
            android:hint="@string/logradouro"
            android:textColor="@color/black"
            />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/txtEditCidade"
            style="@style/editForm"
            android:hint="@string/cidade"
            android:textColor="@color/black"
            />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/txtEditEstado"
            style="@style/editForm"
            android:hint="@string/estado"
            android:textColor="@color/black"
            />

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/ckbTermoDeUso"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/termo_de_uso"
            android:layout_marginStart="18dp"
            android:layout_marginTop="6dp"/>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="50dp">
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnCancelar"
            style="@style/butomForm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancelar"/>


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSalvar"
            style="@style/butomForm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/salvar"/>
        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>

    </ScrollView>
</FrameLayout>
